--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@
     padding: 0;
     margin: 0;
 }
+
+.header {
+    display: inline-block;
+    padding: 3px;
+}
+
+.headcontact {
+    display: inline-block;
+    vertical-align: top;
+}
